--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <div class="header_left_side">
             <h1>The Greatest show on the earth</h1>
             <p>
-                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
-                Latin literature from 45 BC, making it over 2000 years old.
+                Contrary to popular belief, Lorem Ipsum is not simply random text.
             </p>
             <button>Watch Live <i class="fa-solid fa-chevron-right"></i> </button>
         </div>
@@ -27,177 +26,167 @@
     </header>
 
     <main>
-        <div class="main_left_side">
-            <div class="three_btn">
-                <button>Upcoming Match</button>
-                <button>All Group</button>
-                <button class="red_btn">Blog</button>
+        <div class="three_btn">
+            <button class="btn_1">Upcoming Match</button>
+            <button class="btn_2">All Group</button>
+            <button class="red_btn">Blog</button>
+        </div>
+
+        <div class="blog blog1">
+            <div>
+                <img src="./assets/Blog Image.png" alt="">
+            </div>
+            <div class="transfer">
+                <button>Transfer</button>
+                <p>
+                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                </p>
+                <div class="clock_chat">
+                    <i class="fa-solid fa-clock"></i>
+                    <p>10h</p>
+                    <i class="fa-solid fa-comment"></i>
+                    <p>23</p>
+                </div>
+            </div>
+        </div>
+        <div class="blog blog2">
+            <div>
+                <img src="./assets/Blog Image.png" alt="">
+            </div>
+            <div class="transfer">
+                <button>Transfer</button>
+                <p>
+                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                </p>
+                <div class="clock_chat">
+                    <i class="fa-solid fa-clock"></i>
+                    <p>10h</p>
+                    <i class="fa-solid fa-comment"></i>
+                    <p>23</p>
+                </div>
+            </div>
+        </div>
+        <div class="blog blog3">
+            <div>
+                <img src="./assets/Blog Image.png" alt="">
+            </div>
+            <div class="transfer">
+                <button>Transfer</button>
+                <p>
+                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                </p>
+                <div class="clock_chat">
+                    <i class="fa-solid fa-clock"></i>
+                    <p>10h</p>
+                    <i class="fa-solid fa-comment"></i>
+                    <p>23</p>
+                </div>
             </div>
         </div>
 
-        <div class="main_right_side">
-            <div class="blog">
-                <div>
-                    <img src="./assets/Blog Image.png" alt="">
-                </div>
-                <div class="transfer">
-                    <button>Transfer</button>
-                    <p>
-                        Transfer Live: Chlesea in talks over Kimpenbe transfer
-                    </p>
-                    <div class="clock_chat">
-                        <i class="fa-solid fa-clock"></i>
-                        <p>10h</p>
-                        <i class="fa-solid fa-comment"></i>
-                        <p>23</p>
-                    </div>
+        <div class="blog blog4">
+            <div>
+                <img src="./assets/Blog Image.png" alt="">
+            </div>
+            <div class="transfer">
+                <button>Transfer</button>
+                <p>
+                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                </p>
+                <div class="clock_chat">
+                    <i class="fa-solid fa-clock"></i>
+                    <p>10h</p>
+                    <i class="fa-solid fa-comment"></i>
+                    <p>23</p>
                 </div>
             </div>
-            <div class="blog">
-                <div>
-                    <img src="./assets/Blog Image.png" alt="">
-                </div>
-                <div class="transfer">
-                    <button>Transfer</button>
-                    <p>
-                        Transfer Live: Chlesea in talks over Kimpenbe transfer
-                    </p>
-                    <div class="clock_chat">
-                        <i class="fa-solid fa-clock"></i>
-                        <p>10h</p>
-                        <i class="fa-solid fa-comment"></i>
-                        <p>23</p>
-                    </div>
-                </div>
-            </div>
-            <div class="blog">
-                <div>
-                    <img src="./assets/Blog Image.png" alt="">
-                </div>
-                <div class="transfer">
-                    <button>Transfer</button>
-                    <p>
-                        Transfer Live: Chlesea in talks over Kimpenbe transfer
-                    </p>
-                    <div class="clock_chat">
-                        <i class="fa-solid fa-clock"></i>
-                        <p>10h</p>
-                        <i class="fa-solid fa-comment"></i>
-                        <p>23</p>
-                    </div>
-                </div>
-            </div>
-
         </div>
-        <div class="main_right_side">
-            <div class="blog">
-                <div>
-                    <img src="./assets/Blog Image.png" alt="">
-                </div>
-                <div class="transfer">
-                    <button>Transfer</button>
-                    <p>
-                        Transfer Live: Chlesea in talks over Kimpenbe transfer
-                    </p>
-                    <div class="clock_chat">
-                        <i class="fa-solid fa-clock"></i>
-                        <p>10h</p>
-                        <i class="fa-solid fa-comment"></i>
-                        <p>23</p>
-                    </div>
+        <div class="blog blog5">
+            <div>
+                <img src="./assets/Blog Image.png" alt="">
+            </div>
+            <div class="transfer">
+                <button>Transfer</button>
+                <p>
+                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                </p>
+                <div class="clock_chat">
+                    <i class="fa-solid fa-clock"></i>
+                    <p>10h</p>
+                    <i class="fa-solid fa-comment"></i>
+                    <p>23</p>
                 </div>
             </div>
-            <div class="blog">
-                <div>
-                    <img src="./assets/Blog Image.png" alt="">
-                </div>
-                <div class="transfer">
-                    <button>Transfer</button>
-                    <p>
-                        Transfer Live: Chlesea in talks over Kimpenbe transfer
-                    </p>
-                    <div class="clock_chat">
-                        <i class="fa-solid fa-clock"></i>
-                        <p>10h</p>
-                        <i class="fa-solid fa-comment"></i>
-                        <p>23</p>
-                    </div>
-                </div>
-            </div>
-            <div class="blog">
-                <div>
-                    <img src="./assets/Blog Image.png" alt="">
-                </div>
-                <div class="transfer">
-                    <button>Transfer</button>
-                    <p>
-                        Transfer Live: Chlesea in talks over Kimpenbe transfer
-                    </p>
-                    <div class="clock_chat">
-                        <i class="fa-solid fa-clock"></i>
-                        <p>10h</p>
-                        <i class="fa-solid fa-comment"></i>
-                        <p>23</p>
-                    </div>
-                </div>
-            </div>
-
         </div>
-        <div class="main_right_side">
-            <div class="blog">
-                <div>
-                    <img src="./assets/Blog Image.png" alt="">
-                </div>
-                <div class="transfer">
-                    <button>Transfer</button>
-                    <p>
-                        Transfer Live: Chlesea in talks over Kimpenbe transfer
-                    </p>
-                    <div class="clock_chat">
-                        <i class="fa-solid fa-clock"></i>
-                        <p>10h</p>
-                        <i class="fa-solid fa-comment"></i>
-                        <p>23</p>
-                    </div>
+        <div class="blog blog6">
+            <div>
+                <img src="./assets/Blog Image.png" alt="">
+            </div>
+            <div class="transfer">
+                <button>Transfer</button>
+                <p>
+                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                </p>
+                <div class="clock_chat">
+                    <i class="fa-solid fa-clock"></i>
+                    <p>10h</p>
+                    <i class="fa-solid fa-comment"></i>
+                    <p>23</p>
                 </div>
             </div>
-            <div class="blog">
-                <div>
-                    <img src="./assets/Blog Image.png" alt="">
-                </div>
-                <div class="transfer">
-                    <button>Transfer</button>
-                    <p>
-                        Transfer Live: Chlesea in talks over Kimpenbe transfer
-                    </p>
-                    <div class="clock_chat">
-                        <i class="fa-solid fa-clock"></i>
-                        <p>10h</p>
-                        <i class="fa-solid fa-comment"></i>
-                        <p>23</p>
-                    </div>
-                </div>
-            </div>
-            <div class="blog">
-                <div>
-                    <img src="./assets/Blog Image.png" alt="">
-                </div>
-                <div class="transfer">
-                    <button>Transfer</button>
-                    <p>
-                        Transfer Live: Chlesea in talks over Kimpenbe transfer
-                    </p>
-                    <div class="clock_chat">
-                        <i class="fa-solid fa-clock"></i>
-                        <p>10h</p>
-                        <i class="fa-solid fa-comment"></i>
-                        <p>23</p>
-                    </div>
-                </div>
-            </div>
-
         </div>
 
+        <div class="blog blog7">
+            <div>
+                <img src="./assets/Blog Image.png" alt="">
+            </div>
+            <div class="transfer">
+                <button>Transfer</button>
+                <p>
+                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                </p>
+                <div class="clock_chat">
+                    <i class="fa-solid fa-clock"></i>
+                    <p>10h</p>
+                    <i class="fa-solid fa-comment"></i>
+                    <p>23</p>
+                </div>
+            </div>
+        </div>
+        <div class="blog blog8">
+            <div>
+                <img src="./assets/Blog Image.png" alt="">
+            </div>
+            <div class="transfer">
+                <button>Transfer</button>
+                <p>
+                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                </p>
+                <div class="clock_chat">
+                    <i class="fa-solid fa-clock"></i>
+                    <p>10h</p>
+                    <i class="fa-solid fa-comment"></i>
+                    <p>23</p>
+                </div>
+            </div>
+        </div>
+        <div class="blog blog9">
+            <div>
+                <img src="./assets/Blog Image.png" alt="">
+            </div>
+            <div class="transfer">
+                <button>Transfer</button>
+                <p>
+                    Transfer Live: Chlesea in talks over Kimpenbe transfer
+                </p>
+                <div class="clock_chat">
+                    <i class="fa-solid fa-clock"></i>
+                    <p>10h</p>
+                    <i class="fa-solid fa-comment"></i>
+                    <p>23</p>
+                </div>
+            </div>
+        </div>
 
     </main>
 
@@ -209,8 +198,8 @@
             <button>Terms of Servicee</button>
             <button>Privacy Policy</button>
             <button>Privacy Settings</button>
-            <button>Goal App</button>
-            <button>Goal Live</button>
+            <button class="goal">Goal App</button>
+            <button class="live">Goal Live</button>
         </div>
     </footer>
 
